Moving close icon to prevent overlap with title (#3176)

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -89,8 +89,8 @@
 .euiModal__closeIcon {
   background-color: transparentize($euiColorEmptyShade, .1);
   position: absolute;
-  right: $euiSizeL - 7px;
-  top: $euiSizeL - 7px;
+  right: $euiSizeXS;
+  top: $euiSizeXS;
   z-index: 3;
 }
 
